--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			
 			<!-- write HTML code neccesary here -->
-
+			<h1>Zetsy</h1>
+			<hr/>
+			<img src="/images/necklace.jpg">
 		</div><!-- .wrapper -->
 	</body>
 </html>
