--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
 			<section id="press">
 				<h2>Press</h2>
 				<a href="#"><img src="/images/nmai-logo.png"></a><a href="#"><img src="/images/times-logo.png"></a><a href="#"><img src="/images/sedona-logo"></a><a href="#"><img src="/images/times-logo"></a>
-			</section>
+			</section> <!-- press -->
+
+			<footer ><p class="small">&copy; 2014 Zetsy, All Rights Reserved.</p></footer>
 		</div><!-- .wrapper -->
 	</body>
 </html>
