--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</section> <!-- featured -->
 			<section id="press">
 				<h2>Press</h2>
-				<a href="#"><img src="/images/nmai-logo.png"></a><a href="#"><img src="/images/times-logo.png"></a><a href="#"><img src="/images/sedona-logo"></a><a href="#"><img src="/images/times-logo"></a>
+				<a href="#"><img src="/images/nmai-logo.png"></a><a href="#"><img src="/images/times-logo.png"></a><a href="#"><img src="/images/sedona-logo.png"></a><a href="#"><img src="/images/times-logo.png"></a>
 			</section> <!-- press -->
 
 			<footer><p class="small">&copy; 2014 Zetsy, All Rights Reserved.</p></footer>
